added middleware functionality to ewards-key
