# src/api/middlewares/ewards-key/verify-ewards-woocomm.js
@@ -4,53 +4,43 @@ import { validateEwardsKey } from "../../validators/ewards.key.validator.js";
 
 export default async (req, res, next) => {
   const { error } = validateEwardsKey(req.body);
-
+  console.log(error)
+  const { merchant_id, store_url, customer_key, x_api_key } = req.body
   if (error) {
     let code = "00025";
-    if (
-      error.details[0].message.includes("merchant_id") ||
-      error.details[0].message.includes("store_url") ||
-      error.details[0].message.includes("x_api_key") ||
-      error.details[0].message.includes("customer_key")
-    ) {
-      code = "00038";
-    }
     return res
       .status(400)
       .json(errorHelper(code, req, error.details[0].message));
   }
 
   const merchantExists = await EwardsMerchant.exists({
-    merchant_id: req.body.merchant_id,
+    merchant_id: merchant_id,
   }).catch((err) => {
     return res.status(500).json(errorHelper("00031", req, err.message));
   });
 
   const wooCommerceExists = await WooCommerce.exists({
-    store_url: req.body.store_url,
+    store_url: store_url,
   }).catch((err) => {
     return res.status(500).json(errorHelper("00031", req, err.message));
   });
 
-  if (!wooCommerceExists && !merchantExists) {
-    return res.status(404).json({
-      resultMessage: { en: getText("en", "00019") },
-      resultCode: "00019",
-    });
-  } else if (!wooCommerceExists) {
-    return res.status(404).json({
-      resultMessage: { en: getText("en", "00018") },
-      resultCode: "00018",
-    });
-  } else if (!merchantExists) {
-    return res.status(404).json({
-      resultMessage: { en: getText("en", "00017") },
-      resultCode: "00017",
+  const sendResponse = (statusCode, errorCode) => {
+    return res.status(statusCode).json({
+      resultMessage: { en: getText("en", errorCode) },
+      resultCode: errorCode,
     });
   }
 
-  req.merchantExists = merchantExists;
-  req.wooCommerceExists = wooCommerceExists;
+  if (!wooCommerceExists && !merchantExists) {
+    sendResponse(404, "00019")
+  } else if (!wooCommerceExists) {
+    sendResponse(404, "00018")
+  } else if (!merchantExists) {
+    sendResponse(404, "00017")
+  }
+
+  Object.assign(req, { merchantExists, wooCommerceExists });
 
   next();
 };
